--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -48,10 +48,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.facebook.com/liz.kavalski" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://github.com/lizkavalski" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/elizabeth-kavalski/" class="icon fa-linkedin"><span class="label">Linkin</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/liz.kavalski" class="icon fa-facebook"><span class="label"></span></a></li>
+							<li><a href="https://github.com/lizkavalski" class="icon fa-github"><span class="label"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/elizabeth-kavalski/" class="icon fa-linkedin"><span class="label"></span></a></li>
+							<li><a href="#" class="icon fa-envelope"><span class="label"></span></a></li>
 						</ul>
 
 				</div>
@@ -89,13 +89,13 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://group-project-dnd.github.io/DnD-Player-card/" class="image fit"><img src="images/201.jpg" alt="" /></a>
+										<a href="https://group-project-dnd.github.io/DnD-Player-card/" class="image fit"><img src="images/Logo (3).png" alt="" /></a>
 										<header>
-											<h3>Project 201 </h3>
+											<h3>DnD-Player Card </h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/newBanner.jpg" alt="" /></a>
+										<a href="https://github.com/project-301/HindSiteTrader.com" class="image fit"><img src="images/logo.png" alt="" /></a>
 										<header>
 											<h3>Project 301:</h3>
 										</header>
@@ -103,19 +103,19 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Tech.jpg" alt="" /></a>
+										<a href="https://www.npmjs.com/package/@project-jetpack/beam-me-up" class="image fit"><img src="images/rocket.webp" alt="" /></a>
 										<header>
-											<h3>Project 401</h3>
+											<h3>Beam-me-Up</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/cats.jpg" alt="" /></a>
+										<a href="https://github.com/401-javaScript-final-project/final-project-frontend" class="image fit"><img src="images/hat2.png" alt="" /></a>
 										<header>
-											<h3>other Project</h3>
+											<h3>Tippy's App</h3>
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
+								<!-- <div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/butterfly.jpg" alt="" /></a>
 										<header>
@@ -125,11 +125,11 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/beach.jpg" alt="" /></a>
 										<header>
-											<h3>Orther Project</h3>
+											<h3>Other Project</h3>
 										</header>
 									</article>
 								</div>
-							</div>
+							</div> -->
 
 						</div>
 					</section>
@@ -159,7 +159,7 @@
 
 							<p> If you would like to meet up and talk more about Software development please contact me by using the form below with a message or clicking on icons on the bottom-left size of the screen  </p>
 
-							<form method="post" action="#">
+							<form method="post" action="#contact">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
