--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -66,7 +66,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Liz!</strong> a Software Developer hit the the button below to veiw my portfolio projects!</p>
+								<h2 class="alt">Hi! I'm <strong>Liz!</strong> a Software Developer that specilize in UI/UX design. Hit the the button below to veiw my portfolio projects!</p>
 							</header>
 
 							<footer>
@@ -89,47 +89,47 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://group-project-dnd.github.io/DnD-Player-card/" class="image fit"><img src="images/Logo (3).png" alt="" /></a>
+										<img class="image fit"src="images/Logo (3).png" alt="" />
 										<header>
-											<h3>DnD-Player Card </h3>
+											<a href="https://group-project-dnd.github.io/DnD-Player-card/" ><h3>DnD-Player Card </h3> </a>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/project-301/HindSiteTrader.com" class="image fit"><img src="images/logo.png" alt="" /></a>
+										<img class="image fit"src="images/logo.png" alt="" />
 										<header>
-											<h3>Project 301:</h3>
+											<a href="https://github.com/project-301/HindSiteTrader.com" ><h3>HindSiteTrader</h3> </a>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://www.npmjs.com/package/@project-jetpack/beam-me-up" class="image fit"><img src="images/rocket.webp" alt="" /></a>
+										<img class="image fit"src="images/rocket.webp" alt="" /></a>
 										<header>
-											<h3>Beam-me-Up</h3>
+											<a href="https://www.npmjs.com/package/@project-jetpack/beam-me-up" >	<h3>Beam-me-Up</h3></a>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/401-javaScript-final-project/final-project-frontend" class="image fit"><img src="images/hat2.png" alt="" /></a>
+										 <img class="image fit" src="images/hat2.png" alt="" >
 										<header>
-											<h3>Tippy's App</h3>
+											<a href="https://github.com/401-javaScript-final-project/final-project-frontend" ><h3>Tippy's App</h3></a>
 										</header>
 									</article>
 								</div>
-								<!-- <div class="col-4 col-12-mobile">
+								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/butterfly.jpg" alt="" /></a>
+										<img class="image fit" src="images/butterfly.jpg" alt="" />
 										<header>
 											<h3>other project</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/beach.jpg" alt="" /></a>
+										<img class="image fit"src="images/beach.jpg" alt="" />
 										<header>
 											<h3>Other Project</h3>
 										</header>
 									</article>
 								</div>
-							</div> -->
+							</div>
 
 						</div>
 					</section>
