some changes in the css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/reset.css"/>
 		<link rel="stylesheet" href="assets/css/base.css" />
+		<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/layout.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/modules.css" />
@@ -64,15 +65,14 @@
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
 						<div class="container">
-
-							<header >
-								<h2 class="alt">Hi! I'm <strong>Liz!</strong> a Software Developer that specilize in UI/UX design. Hit the the button below to veiw my portfolio projects!</p>
-							</header>
-
-							<footer>
-								<a href="#portfolio" class="button scrolly">Lets Go!</a>
-							</footer>
-
+							<div id="topOfPage">
+								<header>
+									<h2 class="alt">Hi! I'm <strong>Liz!</strong> a Software Developer that specilize in UI/UX design. Hit the the button below to veiw my portfolio projects!</p>
+									</header>
+									<footer>
+										<a href="#portfolio" class="button scrolly">Lets Go!</a>
+									</footer>
+								</div>
 						</div>
 					</section>
 
