add a little tab icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 -->
 <html>
 	<head>
+			<link rel="shortcut icon" href="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2019-12-13/b838282a7762d4ca2f42a70e33bf4059.ico.png" type="image/x-icon">
+			<link rel="icon" href="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2019-12-13/b838282a7762d4ca2f42a70e33bf4059.ico.png" type="image/x-icon">
 		<title>Elizabeth-Kavalski-Profile</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -63,15 +65,17 @@
 			<div id="main">
 
 				<!-- Intro -->
-					<section id="top" class="one dark cover">
+				<section id="top" class="one dark cover">
+					<div class="background-img">
+					</div>
 						<div class="container">
-							<div id="topOfPage">
-								<header>
-									<h2 class="alt">Hi! I'm <strong>Liz!</strong> a Software Developer that specilize in UI/UX design. Hit the the button below to veiw my portfolio projects!</p>
-									</header>
-									<footer>
-										<a href="#portfolio" class="button scrolly">Lets Go!</a>
-									</footer>
+								<div class="topOfPage">
+									<header>
+										<h2 class="alt">Hi! I'm <strong>Liz!</strong> a Software Developer that specilize in UI/UX design. Hit the the button below to veiw my portfolio projects!</p>
+										</header>
+										<footer>
+											<a href="#portfolio" class="button scrolly">Lets Go!</a>
+										</footer>
 								</div>
 						</div>
 					</section>
