--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/daisys.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/DSC01593.jpg" alt="" /></a>
 
-							<p>I grow up in Monroe WA. I have a BA in Early Childhood education,but I decide to leave that feild because I got to the point I where needed to  careers.  Even though they seem different their are some simaliter traits between an Early Childhood educator and a software developer. Some of them including working with a team which include working with people with a verity of background, their is also have problem solving skills for example in a earlychildhood setting it would be solving a behevior issuse or a scoial conflict, while in software devlopment it trying to solve a issuse in the code to make it work. Then their also being able to break down a problems into more mangable steps. The reason I choose software development when decideing to swich career is because  I enjoy the feeling of creating something new and saying "I did that" definalty after facing a difficalt task or issuse in the code,</p>
+							<p>I grow up in Monroe WA. I have a BA in Early Childhood education,but I decide to leave that feild because I got to the point I where needed to  careers.  Even though they seem different their are some simaliter traits between an Early Childhood educator and a software developer. Some of them including working with a team which include working with people with a verity of background, their is also have problem solving skills for example in a earlychildhood setting it would be solving a behevior issuse or a scoial conflict, while in software devlopment it trying to solve a issuse in the code to make it work. Then their also being able to break down a problems into more mangable steps. The reason I choose software development when decideing to swich career is because  I enjoy the feeling of creating something new and saying "I did that" definalty after facing a difficalt task or issuse in the code.</p>
 
 						</div>
 					</section>
