edited photo and add a project

--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<img class="image fit" src="images/butterfly.jpg" alt="" />
+										<img class="image fit" src="images/butterfly-progress.png" alt="" />
 										<header>
-											<h3>other project</h3>
+											<a href="https://github.com/lizkavalski/random-interview-questions"><h3>Interview Flash Cards</h3></a>
+											<h5>(still in progress)</h5>
 										</header>
 									</article>
 									<article class="item">
