add another photo

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<img class="image fit"src="images/beach.jpg" alt="" />
+										<img class="image fit"src="images/coming-soon.jpg" alt="" />
 										<header>
 											<h3>Other Project</h3>
 										</header>
