edit the about me part and the project part

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						</header>
 
 						
-						<p>I grow up in Monroe WA. I have a BA in Early Childhood education,but I decide to leave that feild because I got to the point I where needed to  careers.  Even though they seem different their are some simaliter traits between an Early Childhood educator and a software developer. Some of them including working with a team which include working with people with a verity of background, their is also have problem solving skills for example in a early childhood setting it would be solving a behevior issuse or a scoial conflict, while in software devlopment it trying to solve a issuse in the code to make it work. Then their also being able to break down a problems into more mangable steps. The reason I choose software development when decideing to swich career is because  I enjoy the feeling of creating something new and saying "I did that" definalty after facing a difficalt task or issuse in the code.</p>
+						<p>I grow up in Monroe WA. I have a BA in Early Childhood education,but I decide to leave that feild because I got to the point I where needed to  careers.  Even though they seem different their are some simaliter traits between an Early Childhood educator and a software developer specilizing in UX/UI. Some of them including working with a team which include working with people with a verity of background, their is also have problem solving skills for example in a early childhood setting it would be solving a behevior issuse or a scoial conflict, while in software devlopment it trying to solve a issuse in the code to make it work, or making the product easier for the user to use. Then their also being able to break down a problems into more mangable steps. The reason I choose software development when decideing to swich career is because  I enjoy the feeling of creating something new and saying "I did that" definalty after facing a difficalt task or issuse in the code.</p>
 						<a href="#" class="image featured"><img src="images/DSC01593.jpg" alt="" /></a>
 						
 					</div>
@@ -101,7 +101,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p> Below are some projects I have done that displays my skills as a software developer. Along with working with other people on a projects. Some of the things I love about tech is being able to create new things that people can use. Along with being able to work with other people that have a verity of background.</p>
+							<p> Below are some projects I have worked on that displays my skills as a software developer. Some of these progject was with a group. In those projects I had a hand on creating the the flow and visual aspects. Some of the things I love about tech is being able to create new things that people can use. Along with being able to work with other people that have a verity of background.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
