--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p> If you would like to meet up and talk more about Software development or UX UI please contact me by clicking on one of the icons on the bottom-left size of the screen  </p>
+							<p> If you would like to meet up and talk more about Software development or UX/UI please contact me by clicking on one of the icons on the bottom-left size of the screen  </p>
 <!-- 
 							<form method="post" action="#contact">
 								<div class="row">
